--- a/.config/git/config
+++ b/.config/git/config
@@ -47,7 +47,7 @@
 	open-editing-prev-head = "!bash -c 'git dfp --name-only | cat | xargs -o nvim'"
 	open-editing-prev-head-vscode = "!bash -c 'git dfp --name-only | cat | xargs code'"
 	oe = open-editing
-	oev = open-editing
+	oev = open-editing-vscode
 	oep = open-editing-prev-head
 	oepv = open-editing-prev-head-vscode
 	r = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/'"
