Add the git alias "git au"

--- a/.config/git/config
+++ b/.config/git/config
@@ -26,6 +26,7 @@
 	root = ~/src
 [alias]
 	a = add
+	au = "add -u" # add tracked files
 	c = "commit -v"
 	d = diff
 	di = "diff --ignore-all-space"
