add window size

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -5,4 +5,9 @@ font:
   bold:
     family: HackGen Console NFJ
     style: Bold
+      #size: 36.0
   size: 18.0
+window:
+   dimensions:
+     columns: 133
+     lines: 40
