Update git merged-commit-10, merged-commit-10-files

--- a/.config/git/config
+++ b/.config/git/config
@@ -47,7 +47,8 @@
 	branch-delete-merged = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|master'|xargs git branch -d; };f"
 	worktree-new = "!bash -c 'git worktree add ~/git-worktree/$(dirname $(pwd))-$1' $1"
 	latest-merged-commit = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -1 | awk '{print $1}'"
-	merged-commit-10 = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -10 | awk '{print $1}' | xargs -III git diff II II~ --name-only | cat - "
+	merged-commit-10 = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -10"
+	merged-commit-10-files = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -10 | awk '{print $1}' | xargs -III git diff II II~ --name-only | cat - "
 	open-editing-vscode = "!bash -c 'git dfr --name-only | cat | xargs code'"
 	open-editing = "!git dfr --name-only | xargs -o nvim"
 	open-editing-prev-head = "!bash -c 'git dfp --name-only | cat | xargs -o nvim'"
