--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -2,11 +2,13 @@ font:
   normal:
     family: HackGen Console NFJ
     style: Regular
+  size: 18.0
   bold:
     family: HackGen Console NFJ
     style: Bold
-    size: 18.0
 window:
    dimensions:
      columns: 133
      lines: 40
+import:
+  - "~/.config/alacritty/alacritty.local.yml"
