--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   ubuntu-setup:
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04
 
     steps:
     - uses: actions/checkout@v2
