--- a/.config/git/config
+++ b/.config/git/config
@@ -24,6 +24,8 @@
 	verbose = true
 [ghq]
 	root = ~/src
+[log]
+	date = format:%Y/%m/%d %H:%M:%S
 [alias]
 	a = add
 	au = "add -u" # add tracked files
@@ -43,7 +45,7 @@
 	rao = remote-add-origin
 	remote-show-origin = remote show origin
 	rso = remote-show-origin
-	sw = "!git branch -a | fzf | xargs git checkout"
+	sw = "!git branch -vva | grep -v \\* | fzf --preview='echo \"{}\" | awk \"{print \\$2 }\"| xargs git log -p --color' | awk \"{print \\$1}\" | xargs git checkout"
 	branch-delete-merged = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|master'|xargs git branch -d; };f"
 	worktree-new = "!bash -c 'git worktree add ~/git-worktree/$(dirname $(pwd))-$1' $1"
 	latest-merged-commit = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -1 | awk '{print $1}'"
@@ -58,7 +60,7 @@
 	oep = open-editing-prev-head
 	oepv = open-editing-prev-head-vscode
 	r = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/'"
-	rsw = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/' | fzf | xargs git checkout"
+	rsw = "!git reflog -n 50 --pretty='format:%gs' | perl -anal -e '$seen{$1}++ or print $1 if /checkout:.*to (.+)/' |  fzf --preview=' git log -p --color {}' | xargs git checkout"
 	ls-files-all-history = "!git log --oneline | awk '{ print $1 }' | xargs -I{} git ls-tree -r --name-only {} | sort | uniq"
 	reflog-verbose = log -g
 	vv = branch -vv
@@ -67,3 +69,5 @@
 	dfr = diff-from-release
 	dfp = diff-from-prev-head
 	g = "!f(){ git grep "$@" ':/'; };f"
+	sw2 = !git branch -a | fzf | xargs git checkout
+	sw3 = !git checkout $(git branch -a | fzf )
