fix tmux copy mode keybindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -138,11 +138,11 @@ set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # コピーモードでvimキーバインドを使う
-# setw -g mode-keys vi
+setw -g mode-keys vi
 
 # 'v' で選択を始める
-# bind-key -T copy-mode-vi v send-keys -X begin-selection
-# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # `Enter` でもcopy-pipeを使う
 # unbind -T copy-mode-vi Enter
@@ -150,4 +150,4 @@ set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics
 
 # ']' でpbpasteを使う
 # bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-bind -T copy-mode Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+# bind -T copy-mode Enter send-keys -X copy-pipe-and-cancel "pbcopy"
