Add tmux plugins with tpm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -151,3 +151,15 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 # ']' でpbpasteを使う
 # bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 # bind -T copy-mode Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+
+set-option -g history-limit 10000
+bind-key t choose-tree
+#set-window-option -g window-status-current-format "#{?#{m:#W,zsh},#{=/8/…:#{?#{m:#{pane_current_path},${HOME}},~,#{b:pane_current_path}}},#W}
+
+# --- tmux plugins ---
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+run '~/.tmux/plugins/tpm/tpm'
+
