Rename git alias breanch-delete-merged -> clean-branch

--- a/.config/git/config
+++ b/.config/git/config
@@ -49,7 +49,7 @@
 	remote-show-origin = remote show origin
 	rso = remote-show-origin
 	sw = !git branch --all --format=\"%(refname:short)\" | fzf | xargs git checkout
-	branch-delete-merged = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|master'|xargs git branch -d; };f"
+	clean-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|master'|xargs git branch -d; };f"
 	worktree-new = "!bash -c 'git worktree add ~/git-worktree/$(dirname $(pwd))-$1' $1"
 	latest-merged-commit = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -1 | awk '{print $1}'"
 	merged-commit-10 = "!git log --oneline | grep -E '^[0-9a-z]+ Merge pull request #' | head -10"
