--- a/.tmux.conf
+++ b/.tmux.conf
@@ -151,3 +151,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 # ']' でpbpasteを使う
 # bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 # bind -T copy-mode Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+set-option -g history-limit 100000
