--- a/.tmux.conf
+++ b/.tmux.conf
@@ -162,3 +162,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 run '~/.tmux/plugins/tpm/tpm'
+# ref: https://github.com/tmux-plugins/tpm
+# $ git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
