--- a/.ssh/config
+++ b/.ssh/config
@@ -5,7 +5,7 @@ Host *
   IgnoreUnknown UseKeychain
   UseKeychain yes
   AddKeysToAgent yes
-  IdentityFile ~/.ssh/id_rsa
+  IdentityFile ~/.ssh/id_ed25519
 Host github
   HostName github.com
   User git
