--- a/.config/sheldon/plugins.toml
+++ b/.config/sheldon/plugins.toml
@@ -30,10 +30,10 @@ fpath-completions = "fpath=({{ dir }}/completions $fpath )"
 github = "TheLocehiliosan/yadm"
 apply = [ "fpath-completion-zsh", "path" ]
 
-[plugins.asdf]
-github = "asdf-vm/asdf"
-use = ["asdf.sh"]
-apply = [ "fpath-completions", "source" ]
+# [plugins.asdf]
+# github = "asdf-vm/asdf"
+# use = ["asdf.sh"]
+# apply = [ "fpath-completions", "source" ]
 
 [plugins.sheldon-completion]
 inline = """
