--- a/.config/rtx/config.toml
+++ b/.config/rtx/config.toml
@@ -1,9 +1,10 @@
 [tools]
-awscli = ['latest']
+#awscli = ['latest']
 go = ['latest']
 # heroku-cli = ['latest']
-nodejs = ['latest', 'lts']
+node = ['latest', 'lts', "14", "16"]
 ruby = ['latest', '2.7.8']
+python = ['3.9']
 php = ['latest', '7.4.33']
 terraform = ['latest', '1.0.5', '1.3.1', '1.3.3', '1.3.4', '1.3.6', '1.3.7']
 [settings]
