add: load ~/.ssh/config.local

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,7 @@
 Include config.personal
 Include config.private
 Include config.company
+Include config.local
 Host *
   IgnoreUnknown UseKeychain
   UseKeychain yes
