--- a/.config/rtx/config.toml
+++ b/.config/rtx/config.toml
@@ -6,7 +6,7 @@ node = ['latest', 'lts', "14", "16"]
 ruby = ['latest', '2.7.8']
 python = ['3.9']
 php = ['latest', '7.4.33']
-terraform = ['latest', '1.0.5', '1.3.1', '1.3.3', '1.3.4', '1.3.6', '1.3.7']
+terraform = "1.5.1"
 [settings]
 jobs = 4
 experimental = true
