HackGen35 Console NFJ -> NF

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -2,10 +2,10 @@ import:
   - "~/.config/alacritty/alacritty.local.yml"
 font:
   normal:
-    family: HackGen35 Console NFJ
+    family: HackGen35 Console NF
     style: Regular
   bold:
-    family: HackGen35 Console NFJ
+    family: HackGen35 Console NF
     style: Bold
 shell:
   program: /bin/zsh
