--- a/.config/git/config
+++ b/.config/git/config
@@ -19,7 +19,7 @@
 [core]
 	editor = vim
 	quotepath = false
-	pager = git-split-diffs --color | less -RFX
+#	pager = git-split-diffs --color | less -RFX
 [commit]
 	verbose = true
 [ghq]
