--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -4,7 +4,7 @@ go = ['latest']
 heroku-cli = ['latest']
 node = ['latest', 'lts', '14', '16', '18', '20']
 ruby = "3.2.2"
-python = ['latest', '3', '3.9', '3.9.17']
+python = "3.12.4"
 php = ['latest', '7.4.33']
 terraform = ['latest', '1.0.5', '1.3.1', '1.3.3', '1.3.4', '1.3.6', '1.3.7', '1.4.6', '1.5.0', '1.5.1', '1.5.2']
 [settings]
